_includes/academy.css
/* ... */
.medium.comment {
    max-width: 100%;
}
.bg {
    position: fixed;
    z-index: -1;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    background: #88828c url(/assets/academy.jpg) center 3.7em no-repeat;
    background-size: cover;
}
h1 {
    margin-top: .6em;
}
.items .cover {
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.items .cover h3 {
    overflow: hidden;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 1em;
    margin: 0;
    color: initial;
    text-align: right;
    text-overflow: ellipsis;
    text-shadow: 1px 1px 0 #fff;
    background-color: rgba(255,255,255,.8);
}
.comment {
    padding-left: 1em;
}
.video {
    border-left: .4em solid transparent;
    box-sizing: border-box;
}
.form {
    margin: 6% 1.4em;
    margin-left: .8em;
}
.form button.spin.spin.spin:before {
    margin: -.12em;
    margin-left: .3em;
}
.qa {
    display: flex;
    flex-direction: column;
    list-style: none;
    white-space: normal;
}
.qa li {
    position: relative;
    flex: 1;
    margin: 0;
    list-style-type: none;
}
.qa .column.label {
    width: inherit;
}
.qa ol,
.qa input:checked ~ ol {
    padding: 0;
    margin: auto;
}
.qa input:checked ~ ol {
    padding: 2px;
}
.qa > ol {
    margin: 1em auto;
}
.qa ol ol {
    display: none;
    position: relative;
    background-color: #fff;
    border-top: 1px solid #ddd;
    box-shadow: 1px 2px 1px #aaa;
}
.qa input:checked ~ ol {
    display: block;
}
.qa input {
    display: none;
}
.qa label {
    display: block;
    position: relative;
    padding: 1.2em 1.6em;
    padding-left: 1em;
    line-height: 1.4;
    border-bottom: 1px solid #ddd;
    box-sizing: border-box;
    cursor: pointer;
}
.qa label:before {
    content: "";
    display: inline-block;
    padding: .4em;
    margin: .2em 0 .2em .5em;
    vertical-align: middle;
    background-color: #fff;
    border: .2em solid #f58e84;
    border-radius: 2px;
}
.qa ol ol label {
    padding-right: 2.85em;
}
.qa ol li:last-child label {
    border-bottom: 0;
}
.qa ol ol li:not(:last-child) label {
    border-color: #eee;
}
.qa label:not([disabled]):hover {
    background-color: #fff;
}
.qa label:not([disabled]):hover:before {
    border-color: #569e9b;
}
.qa label[disabled] {
    opacity: .4;
    pointer-events: none;
}
.qa label[disabled]:before {
    background-color: transparent;
    border-color: #ccc;
}
.qa input:checked ~ label {
    font-weight: bold;
    background-color: #fff;
    border-color: transparent;
    box-shadow: 0 -1px 0 #eee,
                1px 2px 1px #aaa;
}
svg {
    fill: currentcolor;
    vertical-align: top;
    box-sizing: border-box;
}
svg[class*=icon-] {
    vertical-align: middle;
}
.icon-error {
    vertical-align: middle;
    width: 1.2em;
    height: 1.2em;
    margin-left: .25em;
}
.button .icon-download {
    width: 1.2em;
    height: 1.5em;
    margin: -.15em -.2em 0 .3em;
    fill: #fff;
}
.qa label .icon-check {
    position: absolute;
    width: 1.55em;
    height: 1.55em;
    visibility: hidden;
    padding: .3em;
    margin-right: -1.89em;
    fill: #fff;
}
.qa input:checked ~ label:before {
    color: #569e9b;
    background-color: currentcolor;
    border-color: currentcolor;
}
.qa input:checked ~ label .icon-check {
    visibility: visible;
}
.qa input:checked ~ label:hover,
.qa ol ol label:not([disabled]):hover {
    background-color: #f8f8f9;
}
.qa input:checked ~ label:hover:after {
    color: #fff;
    transition: color .15s cubic-bezier(.2,1,.4,1);
}

select.unselected {
    color: #000;
    background-color: #fff;
    border-color: #999;
    border-top-color: #ccc;
    border-left-color: #ccc;
}

.dialog {
    position: relative;
    z-index: 1;
    min-height: 15em;
    padding: 1em;
    text-align: center;
    background-color: #fff;
    border-radius: 3px;
    box-shadow: 0 -1px 0 #eee, 1px 2px 2px #aaa;
}
.dialog.final {
    padding: 0;
    text-align: right;
    background-color: transparent;
    box-shadow: none;
}
.dialog.final ol {
    padding-right: 1.3em;
}
.dialog.dialog.dialog ~ * {
    display: none;
}
.dialog .table {
    height: 100%;
}
.dialog .cel {
    display: table-cell;
    vertical-align: middle;
}
.dialog .close {
    position: absolute;
    left: 0;
    top: 0;
    width: 1.6em;
    height: 1.6em;
    font-size: 170%;
    line-height: 1.6;
    outline: 0;
    cursor: pointer;
}
.dialog .close .icon-close {
    width: 100%;
    height: 100%;
    padding: .15em;
    fill: #777;
    transition: fill .35s cubic-bezier(.2,1,.4,1);
}
.dialog .close:hover .icon-close,
.dialog .close:focus .icon-close {
    fill: #333;
}
.dialog h1 {
    color: inherit;
    font-size: 1.7em;
}
.dialog .button {
    display: inline-block;
    visibility: visible;
    width: auto;
    margin: .6em auto 1.2em;
    float: none;
    color: #fff;
    text-shadow: none;
    box-shadow: none;
}
.dialog.final .button {
    margin-right: .2em;
    margin-left: .2em;
}
.calculator .sheet {
    margin: 0;
}
.calculator .row {
    display: table-row-group;
}
.calculator .column {
    display: table-cell;
    padding: .4em;
}
.calculator .label {
    font-weight: bold;
    white-space: nowrap;
}
.calculator input {
    direction: ltr;
    width: 5em;
    text-align: left;
}
.calculator button {
    width: 12em;
    margin-top: .55em;
}

.sum {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.sum .table {
    padding: 0;
    /* table-layout: auto; */
}
.sum .column {
    width: auto;
    padding-top: 0;
    padding-right: 0;
    padding-bottom: 0;
}
.sum .column:last-child {
    padding-left: 0;
}
.sum .table.result .column {
    padding: .4em;
}
.sum .field-wrap {
    overflow: hidden;
}
.sum .label,
.sum input,
.sum select {
    min-width: 0;
        width: 100%;
    font-weight: bold;
}
.sum .label {
    font-weight: normal;
}
.sum .row:not(:first-child) .label {
    margin-top: .5em;
}
/* ... */

